tools/function-summary/bindgen_20210704.rs

#[test]
fn bindgen_test_layout_notcurses_options() {
    assert_eq!(
        ::core::mem::size_of::<notcurses_options>(),
        48usize,
        concat!("Size of: ", stringify!(notcurses_options))
    );
    assert_eq!(
        ::core::mem::align_of::<notcurses_options>(),
        8usize,
        concat!("Alignment of ", stringify!(notcurses_options))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).termtype as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(termtype)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).renderfp as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(renderfp)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).loglevel as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(loglevel)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).margin_t as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(margin_t)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).margin_r as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(margin_r)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).margin_b as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(margin_b)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).margin_l as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(margin_l)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<notcurses_options>())).flags as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(notcurses_options),
            "::",
            stringify!(flags)
        )
    );
}
impl Default for notcurses_options {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
extern "C" {
    #[doc = " Lex a margin argument according to the standard Notcurses definition. There"]
    #[doc = " can be either a single number, which will define all margins equally, or"]
    #[doc = " there can be four numbers separated by commas."]
    pub fn notcurses_lex_margins(
        op: *const cty::c_char,
        opts: *mut notcurses_options,
    ) -> cty::c_int;
}
extern "C" {
    #[doc = " Lex a blitter."]
    pub fn notcurses_lex_blitter(op: *const cty::c_char, blitter: *mut ncblitter_e) -> cty::c_int;
}
extern "C" {
    #[doc = " Get the name of a blitter."]
    pub fn notcurses_str_blitter(blitter: ncblitter_e) -> *const cty::c_char;
}
extern "C" {
    #[doc = " Lex a scaling mode (one of \"none\", \"stretch\", \"scale\", \"hires\","]
    #[doc = " \"scalehi\", or \"inflate\")."]
    pub fn notcurses_lex_scalemode(op: *const cty::c_char, scalemode: *mut ncscale_e)
        -> cty::c_int;
}
extern "C" {
    #[doc = " Get the name of a scaling mode."]
    pub fn notcurses_str_scalemode(scalemode: ncscale_e) -> *const cty::c_char;
}
extern "C" {
    #[doc = " Initialize a Notcurses context on the connected terminal at 'fp'. 'fp' must"]
    #[doc = " be a tty. You'll usually want stdout. NULL can be supplied for 'fp', in"]
    #[doc = " which case /dev/tty will be opened. Returns NULL on error, including any"]
    #[doc = " failure initializing terminfo."]
    pub fn notcurses_init(opts: *const notcurses_options, fp: *mut FILE) -> *mut notcurses;
}
extern "C" {
    #[doc = " The same as notcurses_init(), but without any multimedia functionality,"]
    #[doc = " allowing for a svelter binary. Link with notcurses-core if this is used."]
    pub fn notcurses_core_init(opts: *const notcurses_options, fp: *mut FILE) -> *mut notcurses;
}
extern "C" {
    #[doc = " Destroy a Notcurses context."]
    pub fn notcurses_stop(nc: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Return the topmost plane of the pile containing 'n'."]
    pub fn ncpile_top(n: *mut ncplane) -> *mut ncplane;
}
extern "C" {
    #[doc = " Return the bottommost plane of the pile containing 'n'."]
    pub fn ncpile_bottom(n: *mut ncplane) -> *mut ncplane;
}
extern "C" {
    #[doc = " Renders the pile of which 'n' is a part. Rendering this pile again will blow"]
    #[doc = " away the render. To actually write out the render, call ncpile_rasterize()."]
    pub fn ncpile_render(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Make the physical screen match the last rendered frame from the pile of"]
    #[doc = " which 'n' is a part. This is a blocking call. Don't call this before the"]
    #[doc = " pile has been rendered (doing so will likely result in a blank screen)."]
    pub fn ncpile_rasterize(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Renders and rasterizes the standard pile in one shot. Blocking call."]
    pub fn notcurses_render(nc: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Perform the rendering and rasterization portion of ncpile_render() and"]
    #[doc = " ncpile_rasterize(), but do not write the resulting buffer out to the"]
    #[doc = " terminal. Using this function, the user can control the writeout process."]
    #[doc = " The returned buffer must be freed by the caller."]
    pub fn ncpile_render_to_buffer(
        p: *mut ncplane,
        buf: *mut *mut cty::c_char,
        buflen: *mut size_t,
    ) -> cty::c_int;
}
extern "C" {
    #[doc = " Write the last rendered frame, in its entirety, to 'fp'. If"]
    #[doc = " notcurses_render() has not yet been called, nothing will be written."]
    pub fn ncpile_render_to_file(p: *mut ncplane, fp: *mut FILE) -> cty::c_int;
}
extern "C" {
    #[doc = " Return the topmost ncplane of the standard pile."]
    pub fn notcurses_top(n: *mut notcurses) -> *mut ncplane;
}
extern "C" {
    #[doc = " Return the bottommost ncplane of the standard pile."]
    pub fn notcurses_bottom(n: *mut notcurses) -> *mut ncplane;
}
extern "C" {
    #[doc = " Destroy all ncplanes other than the stdplane."]
    pub fn notcurses_drop_planes(nc: *mut notcurses);
}
#[doc = " An input event. Cell coordinates are currently defined only for mouse events."]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct ncinput {
    #[doc = " identifier. Unicode codepoint or synthesized NCKEY event"]
    pub id: char32_t,
    #[doc = " y cell coordinate of event, -1 for undefined"]
    pub y: cty::c_int,
    #[doc = " x cell coordinate of event, -1 for undefined"]
    pub x: cty::c_int,
    #[doc = " was alt held?"]
    pub alt: bool,
    #[doc = " was shift held?"]
    pub shift: bool,
    #[doc = " was ctrl held?"]
    pub ctrl: bool,
    #[doc = " input event number"]
    pub seqnum: u64,
}
#[test]
fn bindgen_test_layout_ncinput() {
    assert_eq!(
        ::core::mem::size_of::<ncinput>(),
        24usize,
        concat!("Size of: ", stringify!(ncinput))
    );
    assert_eq!(
        ::core::mem::align_of::<ncinput>(),
        8usize,
        concat!("Alignment of ", stringify!(ncinput))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).y as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).alt as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(alt)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).shift as *const _ as usize },
        13usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(shift)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).ctrl as *const _ as usize },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(ctrl)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncinput>())).seqnum as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ncinput),
            "::",
            stringify!(seqnum)
        )
    );
}
extern "C" {
    #[doc = " See ppoll(2) for more detail. Provide a NULL 'ts' to block at length, a 'ts'"]
    #[doc = " of 0 for non-blocking operation, and otherwise a timespec to bound blocking."]
    #[doc = " Signals in sigmask (less several we handle internally) will be atomically"]
    #[doc = " masked and unmasked per ppoll(2). It should generally contain all signals."]
    #[doc = " Returns a single Unicode code point, or (char32_t)-1 on error. 'sigmask' may"]
    #[doc = " be NULL. Returns 0 on a timeout. If an event is processed, the return value"]
    #[doc = " is the 'id' field from that event. 'ni' may be NULL."]
    pub fn notcurses_getc(
        n: *mut notcurses,
        ts: *const timespec,
        sigmask: *const sigset_t,
        ni: *mut ncinput,
    ) -> char32_t;
}
extern "C" {
    #[doc = " Get a file descriptor suitable for input event poll()ing. When this"]
    #[doc = " descriptor becomes available, you can call notcurses_getc_nblock(),"]
    #[doc = " and input ought be ready. This file descriptor is *not* necessarily"]
    #[doc = " the file descriptor associated with stdin (but it might be!)."]
    pub fn notcurses_inputready_fd(n: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Enable the mouse in \"button-event tracking\" mode with focus detection and"]
    #[doc = " UTF8-style extended coordinates. On failure, -1 is returned. On success, 0"]
    #[doc = " is returned, and mouse events will be published to notcurses_getc()."]
    pub fn notcurses_mouse_enable(n: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Disable mouse events. Any events in the input queue can still be delivered."]
    pub fn notcurses_mouse_disable(n: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Disable signals originating from the terminal's line discipline, i.e."]
    #[doc = " SIGINT (^C), SIGQUIT (^\\), and SIGTSTP (^Z). They are enabled by default."]
    pub fn notcurses_linesigs_disable(n: *mut notcurses) -> cty::c_int;
}
extern "C" {
    #[doc = " Restore signals originating from the terminal's line discipline, i.e."]
    #[doc = " SIGINT (^C), SIGQUIT (^\\), and SIGTSTP (^Z), if disabled."]
    pub fn notcurses_linesigs_enable(n: *mut notcurses) -> cty::c_int;
}
